Fix hero alignment and font colors

--- a/app/assets/styles/components/_header.styl
+++ b/app/assets/styles/components/_header.styl
@@ -16,7 +16,6 @@ oi-header
   +above('m')
     border-bottom none
     background-color transparent
-    padding 0 remify(30px)
 
   &_title
     color $white
@@ -34,14 +33,13 @@ oi-header
       height remify(112px)
       line-height remify(112px)
       text-align left
-      margin-top remify(130px)
+      margin-top remify(55px)
 
   &_client-type
-    display none
     +above('m')
       height remify(112px)
       line-height remify(112px)
-      margin-top remify(130px)
+      margin-top remify(46px)
       width 50%
       float right
       text-align right
